--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
         </header>
     </div>
     
-    <form action="http://localhost/info2180-lab4/superheroes.php" method="get">
+    <form action="" method="get">
         <label>Search by Full Name or Alias</label> 
         <div class="form-field"> 
-            <input type="text" name="heroname" id="heroname"/>
+            <input type="search" name="heroname" id="heroname"/>
             <button type="button" id="searchBtn" class="btn">Search</button>
         </div> 
     </form>
 
     <div class="content">
         <h2>Results</h2>
-            <div id="result">
-               
-            </div>
+            <div id="result"></div>
     </div>
     <div class="footer">
         <footer> 
